# aixa

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  main.cpp
src/: AlsaExamples.cpp  AudioBuilder.cpp  AudioDefinitions.h  AudioWorker.cpp  AudioWorker.h  CMakeLists.txt  CommandBuilder.h  MainEventFilter.h  main.cpp
src/audio/: AudioBuilder.cpp  AudioBuilder.h  AudioDefinitions.h  AudioWorker.cpp  AudioWorker.h  Buffers.cpp  Buffers.h  Commands.h  NoteSetter.cpp  SineGenerator.cpp  SineGenerator.h  utils.cpp
src/examples/: AlsaExamples.cpp
src/gui/: MainEventFilter.cpp  MainEventFilter.h
src/mainlib/: CMakeLists.txt  Command.h  CommandBuilder.h  CommandListener.h  globals.h
src/mainlib/audio/: AudioBuilder.cpp  AudioBuilder.h  AudioDefinitions.h  AudioProcessingThread.cpp  AudioProcessingThread.h  AudioWorker.cpp  AudioWorker.h  AudioWorkerFactory.cpp  AudioWorkerFactory.h  AudioWorkerOld.cpp  AudioWorkerOld.h  Buffers.cpp  Commands.cpp  Commands.h  InterleavedBuffer.cpp  InterleavedBuffer.h  InterleavedBufferFactory.cpp  InterleavedBufferFactory.h  InterleavedBufferGenerator.cpp  InterleavedBufferGenerator.h  NoteSetter.cpp  NoteSetter.h  Publisher.cpp  Publisher.h  SineGenerator.cpp  SineGenerator.h  StreamReader.cpp  StreamReader.h  VolumeManager.cpp  VolumeManager.h  utils.cpp  utils.h
src/mainlib/audio/note/: Chord.h  ChordBuilder.cpp  ChordBuilder.h  Note.cpp  Note.h  NoteConsumer.cpp  NoteConsumer.h  NoteSetter.cpp  NoteSetter.h  NotesProcessor.cpp  NotesProcessor.h
src/mainlib/audio/test/: CMakeLists.txt  SineGenerator_UTest.cpp  SineGenerator_UTest.h
src/mainlib/buffers/: BuffersRing.h  CircularBuffer.cpp  CircularBuffer.h
src/mainlib/examples/: AlsaExamples.h
src/mainlib/gui/: CentralNoteManager.cpp  CentralNoteManager.h  CharTextureProvider.cpp  CharTextureProvider.h  GraphicsEnvironment.cpp  GraphicsEnvironment.h  GraphicsEnvironmentFactory.cpp  GraphicsEnvironmentFactory.h  MainEventFilter.cpp  MainEventFilter.h  MainWindow.h  NoteDrawer.cpp  NoteDrawer.h  NoteProvider.cpp  NoteProvider.h  NoteRenderable.cpp  NoteRenderable.h  OpenGLTask.cpp  OpenGLTask.h  OpenGLWindow.cpp  OpenGLWindow.h  OpenGLWindow2.cpp  OpenGLWindow2.h  OpenGLWorker.cpp  OpenGLWorker.h  RenderableObject.cpp  RenderableObject.h  ShadedRenderableObject.cpp  ShadedRenderableObject.h  TriangleWindow.cpp  TriangleWindow.h  fragment.glsl
src/mainlib/gui/bitmap/: Bitmap.h  BitmapBuilders.cpp  BitmapBuilders.h  BitmapProvider.h  BitmapsProvider.cpp  BitmapsProvider.h  CharProvider.cpp  CharProvider.h  CharacterBitmapProvider.cpp  CharacterBitmapProvider.h  FreeTypeCharacterBitmapProvider.cpp  FreeTypeCharacterBitmapProvider.h  FreeTypeUtils.cpp  FreeTypeUtils.h  GlyphMetrics.h  ImagesProvider.cpp  ImagesProvider.h  ProceduralProvider.cpp  ProceduralProvider.h  SpectrogramBitmapProvider.cpp  SpectrogramBitmapProvider.h
src/mainlib/gui/gl/: DrawWidget.cpp  DrawWidget.h  DrawingWorker.cpp  DrawingWorker.h  GLContextManager.cpp  GLContextManager.h  OpenGLTask.cpp  OpenGLTask.h  OpenGLWindow.cpp  OpenGLWindow.h  Scene.cpp  Scene.h  ShadersCollection.h  utils.cpp  utils.h
src/mainlib/gui/object/: Animation.cpp  Animation.h  NoteRenderable.cpp  NoteRenderable.h  RenderableObject.cpp  RenderableObject.h  ShadedRenderableObject.cpp  ShadedRenderableObject.h
src/mainlib/gui/objects/: CentralNoteManager.cpp  CentralNoteManager.h  ImmutableTextBox.cpp  ImmutableTextBox.h  InstructionsBanner.cpp  InstructionsBanner.h  NoteRenderable.cpp  NoteRenderable.h  SpectrogramPlane.cpp  SpectrogramPlane.h  TexturedPlane.cpp  TexturedPlane.h  YLogScale.cpp  YLogScale.h  YScale.cpp  YScale.h
src/mainlib/gui/scene/: Animation.cpp  Animation.h  AnimationList.cpp  AnimationList.h  Dimensions.h  RenderableObject.cpp  RenderableObject.h  Scene.cpp  Scene.h  SceneState.cpp  SceneState.h  ShadedRenderableObject.cpp  ShadedRenderableObject.h
src/mainlib/gui/shaders/: fragment.glsl  vertex.glsl
src/mainlib/gui/texture/: DynamicTexture.cpp  DynamicTexture.h  Texture.cpp  Texture.h  TextureCollection.cpp  TextureCollection.h
src/mainlib/math/: BasisMatrix.h  Complex.h  ComplexExponential.h  ConstVectorProxy.h  FourierTransform.cpp  FourierTransform.h  InvertibleNumber.h  Matrix.cpp  Matrix.h  Matrix2.h  SineGenerator.cpp  SineGenerator.h  Vector.cpp  Vector.h  VectorProxy.h  test.cpp  typeAxioms.h  types.cpp  types.h  vectorUtils.cpp  vectorUtils.h
src/mainlib/math/dft/: CooleyTukeyFFT.cpp  CooleyTukeyFFT.h  FFTFactory.cpp  FFTFactory.h  FourierTransform.cpp  FourierTransform.h  FourierTransformFactory.cpp  FourierTransformFactory.h  MatrixDFTFactory.cpp  MatrixDFTFactory.h  MatrixFourierTransform.cpp  MatrixFourierTransform.h  SpectrogramBuilder.cpp  SpectrogramBuilder.h  SpectrogramComputer.cpp  SpectrogramComputer.h  SpectrogramFragment.h
src/mainlib/math/scale/: LinearScale.cpp  LinearScale.h  LogScale.cpp  LogScale.h  Scale.cpp  Scale.h
src/mainlib/math/test/: CMakeLists.txt  FourierTransform_UTest.cpp  FourierTransform_UTest.h
src/mainlib/observer/: Observable.h  Observer.h
src/mainlib/stream/: ByteReader.cpp  ByteReader.h  FileReader.cpp  FileReader.h  FormatExtractor.cpp  FormatExtractor.h  Stream.h  StreamFactory.h  StreamTypes.cpp  StreamTypes.h  WavFormat.h  WavReader.cpp  WavReader.h
src/mainlib/stream/in/: AbstractBitInputReader.h  BasicBitReader.h  BasicByteReader.cpp  BasicByteReader.h  BitInputReader.h  BitReaderSource.h  ByteReader.h  FileReader.cpp  FileReader.h  InStreamOperations.h  sizes.h
src/mainlib/stream/mp3/: ByteReservoir.cpp  ByteReservoir.h  FrameHeader.cpp  FrameHeader.h  FrameSynthesizer.cpp  FrameSynthesizer.h  FrameSynthesizerFactory.cpp  FrameSynthesizerFactory.h  MainDataReader.cpp  MainDataReader.h  Mp3Decoder.cpp  Mp3Decoder.h  Mp3Functions.cpp  Mp3Functions.h  Mp3Stream.cpp  Mp3Stream.h  Mp3StreamFactory.cpp  Mp3StreamFactory.h  types.cpp  types.h
src/mainlib/threading/: BuffersRing.h  CircularBuffer.h  WorkerThread.h
src/mainlib/transfer/: Emitter.h  Observable.h  Observer.h  Receiver.h
src/platform/: aixa_export.h
(+70 files in other folders)
